--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F31a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -464,7 +464,7 @@
                                             <outlet property="labTitle" destination="r7p-dZ-Yyn" id="cai-cF-r0j"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="IdentifierUserinfoBody" rowHeight="64" id="8r1-xz-Xah" customClass="CHUnitCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="IdentifierUserinfoBody" rowHeight="64" id="8r1-xz-Xah">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8r1-xz-Xah" id="uz3-ET-neV">
@@ -3365,17 +3365,17 @@
                                                     <exclude reference="Q1s-rC-oYU"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="XIQ-a9-oa5"/>
-                                                    <exclude reference="ZRO-EC-E30"/>
-                                                    <exclude reference="Qai-hq-quU"/>
-                                                    <exclude reference="Tmz-hx-3fa"/>
-                                                    <exclude reference="qK7-qi-zeI"/>
-                                                    <exclude reference="iZl-Qu-VAo"/>
-                                                    <exclude reference="vHm-aA-0gm"/>
-                                                    <exclude reference="zeN-Vd-2s8"/>
                                                     <exclude reference="Bsb-Yd-jbw"/>
                                                     <exclude reference="q0b-9N-gaR"/>
                                                     <exclude reference="qph-ji-Jtc"/>
+                                                    <exclude reference="iZl-Qu-VAo"/>
+                                                    <exclude reference="vHm-aA-0gm"/>
+                                                    <exclude reference="zeN-Vd-2s8"/>
+                                                    <exclude reference="Qai-hq-quU"/>
+                                                    <exclude reference="Tmz-hx-3fa"/>
+                                                    <exclude reference="qK7-qi-zeI"/>
+                                                    <exclude reference="XIQ-a9-oa5"/>
+                                                    <exclude reference="ZRO-EC-E30"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
@@ -3386,17 +3386,17 @@
                                                     <include reference="Q1s-rC-oYU"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="XIQ-a9-oa5"/>
-                                                    <include reference="ZRO-EC-E30"/>
-                                                    <include reference="Qai-hq-quU"/>
-                                                    <include reference="Tmz-hx-3fa"/>
-                                                    <include reference="qK7-qi-zeI"/>
-                                                    <include reference="iZl-Qu-VAo"/>
-                                                    <include reference="vHm-aA-0gm"/>
-                                                    <include reference="zeN-Vd-2s8"/>
                                                     <include reference="Bsb-Yd-jbw"/>
                                                     <include reference="q0b-9N-gaR"/>
                                                     <include reference="qph-ji-Jtc"/>
+                                                    <include reference="iZl-Qu-VAo"/>
+                                                    <include reference="vHm-aA-0gm"/>
+                                                    <include reference="zeN-Vd-2s8"/>
+                                                    <include reference="Qai-hq-quU"/>
+                                                    <include reference="Tmz-hx-3fa"/>
+                                                    <include reference="qK7-qi-zeI"/>
+                                                    <include reference="XIQ-a9-oa5"/>
+                                                    <include reference="ZRO-EC-E30"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
